[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Ivan Veselov <veselov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
permutohedron = "0.2"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
criterion = "0.3"

############ For Criterion benchmarks
[[bench]]
name = "day3"
harness = false

[lib]
bench = false

[[bin]]
name = "aoc-2019"
path = "src/main.rs"
bench = false
##############################

### For profiling
[profile.release]
debug = true
