[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Ivan Veselov <veselov@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.8.2"
permutohedron = "0.2"
log = "0.4"
env_logger = "0.7"
num = "0.2"
indoc = "0.3"
image = "0.22"

[dev-dependencies]
criterion = "0.3"

############ For Criterion benchmarks
[[bench]]
name = "day9"
harness = false

[lib]
bench = false

[[bin]]
name = "aoc-2019"
path = "src/main.rs"
bench = false
##############################

### For profiling
[profile.release]
debug = true
